# mrmat-python-cli

./: .flake8  .gitignore  .pylintrc  LICENSE  README.md  dev-requirements.txt  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  test-requirements.txt
.github/workflows/: build.yml  codeql.yml  python-package.yml  sast.yml
ci/: __init__.py
mrmat_python_cli/: __init__.py  app.py  cui.py
mrmat_python_cli/commands/: __init__.py  abstract_command.py  config_show.py  greeting.py  long.py  long_running.py  openid_rs_token.py  resource.py  ui.py  ui_demo.py
src/mrmat_python_cli/: cui.py
src/mrmat_python_cli/commands/: __init__.py  ui.py
tests/: conftest.py  test_cui.py  test_greeting.py
