[build-system]
requires = [
    'setuptools>=42.0.0',
    'wheel >= 0.36.0',
    'pylint~=2.15.5',           # MIT
    'pytest~=7.2.0',            # GPL-2.0-or-later
    'pytest-cov~=4.0.0',        # MIT
]
build-backend = 'setuptools.build_meta'

[project]
name = "mrmat-python-cli"
description = "Boilerplate code for a Python CLI"
urls = { "Sources" = "https://github.com/MrMatAP/mrmat-hello-python" }
keywords = ["experimental"]
readme = "README.md"
license = { text = "MIT" }
authors = [
    { "name" = "Mathieu Imfeld", "email" = "imfeldma+9jqerw@gmail.com" }
]
maintainers = [
    { "name" = "Mathieu Imfeld", "email" = "imfeldma+9jqerw@gmail.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT",
    "Programming Language :: Python :: 3.11"
]
requires-python = ">=3.10"
dependencies = [
    "rich~=12.6.0",
    "requests~=2.28.1"
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = { attr = "ci.version "}

[tool.setuptools.packages.find]
where = ["src"]
include = ["mrmat_python_cli*"]
namespaces = true

[tool.setuptools.package-data]
"*" = ["*.mo"]

[project.scripts]
mrmat-python-cli = "mrmat_python_cli.cui:main"

# If you are debugging your tests using PyCharm then comment out the coverage options
# in addopts
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=mrmat_python_cli --cov-report=term --cov-report=xml:build/coverage.xml --junit-xml=build/junit.xml"
testpaths = ["tests"]
junit_family = "xunit2"
log_cli = 1
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format="%Y-%m-%d %H:%M:%S"
