[metadata]
name = mrmat-python-cli
version = attr: ci.version
author = Mathieu Imfeld
author_email = imfeldma+9jqerw@gmail.com
maintainer = Mathieu Imfeld
maintainer_email = imfeldma+9jqerw@gmail.com
long_description = file: README.md
license = MIT
url = https://github.com/MrMatOrg/mrmat-python-cli
classifiers =
    Development Status :: 3 - Alpha
    Topic :: PKI
    License :: OSI Approved :: MIT
    Programming Language :: Python :: 3.9

[options]
packages = find:
install_requires =
    rich~=10.14.0

[options.entry_points]
console_scripts =
    mrmat-python-cli = mrmat_python_cli.cui:main

[options.packages.find]
exclude =
    ci
